Add test level functionality + downgrade to Java 8 (#67)
* Add level test button in editor

* Remove new language features, so that the project runs on JDK 1.8

* Fix missing case in objectToEditable

* Improve switch statements

* Fix changing look and feel when resizing map

* Fix image scaling in editor, fully works now (:

* Add version warning

* Fix testing levels with SmartEnemies

---------

Co-authored-by: Tysek64 <tysek2004@gmail.com>